fixing z-index

--- a/src/widgets/header/ui/header.scss
+++ b/src/widgets/header/ui/header.scss
@@ -7,7 +7,7 @@
   display: flex;
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 2;
   background-color: map.get(constants.$colors, "black");
   height: 48px;
 
